--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,3 +40,4 @@ security:
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/jeu, roles: ROLE_JOUEUR }
+        - { path: ^/profil, roles: ROLE_JOUEUR }
